--- a/.github/workflows/script-injection.yml
+++ b/.github/workflows/script-injection.yml
@@ -8,8 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Assign label
+        env:
+          issue_title: ${{ github.event.issue.title }}
         run: |
-          issue_title="${{ github.event.issue.title }}"
+          #issue_title="${{ github.event.issue.title }}"
           if [[ "$issue_title" == *"bug"* ]]; then
           echo "Issue is about a bug!"
           else
